--- a/packages/pagination/package.json
+++ b/packages/pagination/package.json
@@ -55,6 +55,7 @@
     "yjs": "^13.6.0"
   },
   "peerDependencies": {
+    "@platejs/yjs": ">=52.0.0",
     "platejs": ">=52.0.0",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0",
