good news: the toggle works. bad news: (1) only the first   page has rendering borders, the remaining don't, (2) it   messed up big with formatting: adding a lot of extra   space at the beginning of teh document, (3) moved the   suggestions to teh top, (4) broke the tables, (5) broke   the blocks movement (now just one block per page in lieu   of one per paragraph). we got the follwiong errors in   tehf rontend:L ## Error Type   Console Error
  ## Error Message
  In HTML, <th> cannot be a child of <div>.
  This will cause a hydration error.

    ...
      <TableRowElement attributes={{...}}
  element={{children:[...], ...}} path={[...]}
  api={{block:function, ...}} ...>
        <PlateElement$1 attributes={{...}}
  element={{children:[...], ...}} path={[...]}
  api={{block:function, ...}} ...>
          <tr data-slate-node="element" data-slate-
  inline={undefined} data-block-id={undefined}
  ref={function} ...>
            <td>
            <Element decorations={[...]}
  element={{children:[...], ...}} renderElement={function
  render} ...>
              <HydrateAtoms store={{...}} atoms={{element:
  {...}, ...}} element={{children:[...], ...}}
  entry={[...]} ...>
                <Effect>
                <ElementContent editor={{children:
  [...], ...}} plugin={{key:"th", ...}}
  attributes={{...}} ...>
                  <Draggable attributes={{...}}
  element={{children:[...], ...}} path={[...]}
  api={{block:function, ...}} ...>
                    <div className="relative g..."
  onMouseEnter={function onMouseEnter}>
                      <div>
  >                   <div
  >                     ref={{current:null}}
  >                     className="slate-blockWrapper flow-
  root"
  >                     onContextMenu={function
  onContextMenu}
  >                   >
                        <_c>
                          <TableCellHeaderElement
  attributes={{...}} element={{children:[...], ...}}
  path={[...]} ...>
                            <TableCellElemen

--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "postinstall": "bunx skiller@latest apply && patch-package --patch-dir tooling/patches",
     "lint": "biome check . && eslint",
     "lint:fix": "biome check . --fix",
+    "nuke:cache": "rimraf '**/.turbo' '**/.next'",
     "nuke:node_modules": "rimraf '**/node_modules'",
+    "nuke:all": "rimraf '**/.turbo' '**/.next' '**/node_modules' '**/dist'",
     "p:brl": "sh tooling/scripts/brl.sh",
     "p:build": "cd \"$INIT_CWD\" && yarn p:tsdown",
     "p:build:watch": "cd \"$INIT_CWD\" && yarn p:tsdown --watch",
