iussues: (1) the dragable blocks work on both modes, (2)   same for comments, except that the icon for the comment   or suggestion on the right is one line above (sligbhtly   above) what it should be. unfortunately, when i paste a   word doc, for example, it lsoes pagination completely,   even when i go back and forth on the mode.

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "lint:fix": "biome check . --fix",
     "nuke:cache": "rimraf '**/.turbo' '**/.next'",
     "nuke:node_modules": "rimraf '**/node_modules'",
+    "nuke:dist": "rimraf '**/dist'",
     "nuke:all": "rimraf '**/.turbo' '**/.next' '**/node_modules' '**/dist'",
     "p:brl": "sh tooling/scripts/brl.sh",
     "p:build": "cd \"$INIT_CWD\" && yarn p:tsdown",
