--- a/apps/www_worker/package.json
+++ b/apps/www_worker/package.json
@@ -5,12 +5,12 @@
   "description": "Plate documentation website",
   "type": "module",
   "scripts": {
-    "prebuild": "bunx contentlayer2 build && bunx tsx --tsconfig ./scripts/tsconfig.scripts.json scripts/build-docs-data.mts",
-    "build": "bun run prebuild && bun run r && NODE_OPTIONS='--max-old-space-size=8192' bunx next build",
+    "build:docs-data": "bunx contentlayer2 build && tsx --tsconfig ./scripts/tsconfig.scripts.json scripts/build-docs-data.mts",
+    "build": "bun run build:docs-data && bun run r && NODE_OPTIONS='--max-old-space-size=8192' next build",
     "build:worker": "opennextjs-cloudflare build",
     "build:contentlayer": "bunx contentlayer2 build",
-    "build:registry": "NODE_ENV=production bunx tsx --tsconfig ./scripts/tsconfig.scripts.json scripts/build-registry.mts",
-    "build:tw": "bunx tailwindcss -i ./src/app/globals.css -o ./public/tailwind.css --minify",
+    "build:registry": "NODE_ENV=production tsx --tsconfig ./scripts/tsconfig.scripts.json scripts/build-registry.mts",
+    "build:tw": "tailwindcss -i ./src/app/globals.css -o ./public/tailwind.css --minify",
     "dev": "concurrently \"bunx contentlayer2 dev\" \"bunx next dev\" \"PORT=4444 node ../../node_modules/y-webrtc/bin/server.js\"",
     "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
     "lint": "yarn p:lint",
@@ -26,7 +26,7 @@
     "shadcn:dev:docs": "shadcn build public/rd/registry-docs.json --output public/rd",
     "start": "next start",
     "test:r": "bunx tsx --tsconfig ./scripts/tsconfig.scripts.json ./scripts/test-registry.mts",
-    "typecheck": "bun run prebuild && bunx tsc --noEmit",
+    "typecheck": "bun run build:docs-data && bunx tsc --noEmit",
     "upload": "opennextjs-cloudflare build && opennextjs-cloudflare upload",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
     "typecheck:watch": "yarn typecheck --watch"
@@ -54,7 +54,8 @@
     "@faker-js/faker": "9.8.0",
     "@hocuspocus/provider": "2.15.2",
     "@hookform/resolvers": "5.1.1",
-    "@next/third-parties": "16.0.10",
+    "@next/third-parties": "^16.1.6",
+    "@opennextjs/cloudflare": "^1.16.2",
     "@platejs/ai": "workspace:^",
     "@platejs/autoformat": "workspace:^",
     "@platejs/basic-nodes": "workspace:^",
@@ -142,7 +143,7 @@
     "lodash": "4.17.21",
     "lowlight": "3.3.0",
     "lucide-react": "0.514.0",
-    "next": "16.0.10",
+    "next": "^16.1.6",
     "next-contentlayer2": "0.4.6",
     "next-themes": "0.4.6",
     "node-fetch": "3.3.2",
@@ -181,7 +182,6 @@
     "zod": "3.25.61"
   },
   "devDependencies": {
-    "@opennextjs/cloudflare": "^1.16.2",
     "@shikijs/compat": "1.1.7",
     "@tailwindcss/cli": "4.1.8",
     "@types/react-syntax-highlighter": "15.5.13",
