--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "brl": "yarn g:brl",
-    "build": "yarn g:build",
+    "build": "yarn install && yarn g:build",
     "build:apps": "turbo --filter \"./apps/www\" build",
     "build:www": "yarn workspace www build",
     "build:www-worker": "yarn workspace www-worker build:worker",
