--- a/apps/www_worker/tsconfig.json
+++ b/apps/www_worker/tsconfig.json
@@ -1,14 +1,50 @@
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "jsx": "preserve",
+    "rootDir": ".",
+    "lib": [
+      "ESNext",
+      "DOM",
+      "DOM.Iterable"
+    ],
+    "allowJs": true,
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
+    "module": "ESNext",
+    "jsx": "react-jsx",
+    "moduleResolution": "bundler",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "noEmit": true,
+    "noImplicitAny": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "strict": true,
+    "strictBindCallApply": true,
+    "strictFunctionTypes": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true,
+    "target": "ESNext",
+    "types": [
+      "node",
+      "@testing-library/jest-dom",
+      "bun-types"
+    ],
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "contentlayer/generated": ["./.contentlayer/generated"],
-      "registry": ["./public/r/registry.json"],
-      "registry-shadcn": ["./registry-shadcn.json"]
+      "@/*": [
+        "./src/*"
+      ],
+      "contentlayer/generated": [
+        "./.contentlayer/generated"
+      ],
+      "registry": [
+        "./public/r/registry.json"
+      ],
+      "registry-shadcn": [
+        "./registry-shadcn.json"
+      ]
     },
     "plugins": [
       {
@@ -35,7 +71,12 @@
     ".next/types/**/*.ts",
     ".contentlayer/generated",
     "./scripts/**/*.ts",
-    "./registry.json"
+    "./registry.json",
+    ".next/dev/types/**/*.ts"
   ],
-  "exclude": ["node_modules", "__registry__", "**/blocks/fumadocs"]
+  "exclude": [
+    "node_modules",
+    "__registry__",
+    "**/blocks/fumadocs"
+  ]
 }
