--- a/apps/www_worker/wrangler.jsonc
+++ b/apps/www_worker/wrangler.jsonc
@@ -4,14 +4,54 @@
   "main": ".open-next/worker.js",
   "compatibility_date": "2026-02-04",
   "compatibility_flags": ["nodejs_compat", "global_fetch_strictly_public"],
+  // Minification helps to keep the Worker bundle size down and improve start up time.
+  "minify": true,
+  "workers_dev": true,
+  "preview_urls": true,
   "assets": {
-    "directory": ".open-next/assets",
-    "binding": "ASSETS"
+    "binding": "ASSETS",
+    "directory": ".open-next/assets"
   },
+  "observability": {
+    "enabled": true,
+    "logs": {
+      "enabled": true
+    },
+    "traces": {
+      "enabled": true
+    }
+  },
+  /**
+   * Smart Placement
+   * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
+   */
+  "placement": { "mode": "smart" },
+  /**
+   * Service Bindings (self-reference required by opennextjs-cloudflare for caching)
+   * https://opennext.js.org/cloudflare/caching
+   */
   "services": [
     {
       "binding": "WORKER_SELF_REFERENCE",
       "service": "plate"
     }
-  ]
+  ],
+  /**
+   * R2 Incremental Cache
+   * https://opennext.js.org/cloudflare/caching
+   * Create the bucket before deploying: wrangler r2 bucket create cache
+   */
+  "r2_buckets": [
+    {
+      "binding": "NEXT_INC_CACHE_R2_BUCKET",
+      "bucket_name": "plate-cache"
+    }
+  ],
+  /**
+   * Image Optimization
+   * https://opennext.js.org/cloudflare/howtos/image
+   */
+  "images": {
+    "binding": "IMAGES"
+  }
 }
