--- a/apps/www_worker/wrangler.jsonc
+++ b/apps/www_worker/wrangler.jsonc
@@ -33,7 +33,8 @@
   "services": [
     {
       "binding": "WORKER_SELF_REFERENCE",
-      "service": "plate"
+      "service": "plate",
+      "environment": "production"
     }
   ],
   /**
