--- a/packages/docx-io/package.json
+++ b/packages/docx-io/package.json
@@ -59,13 +59,11 @@
     "nanoid": "^5.0.9",
     "path-is-absolute": "^1.0.0",
     "react-compiler-runtime": "^1.0.0",
-    "turbo": "^2.8.2",
     "underscore": "^1.13.1",
     "validator": "^13.15.15",
     "virtual-dom": "^2.1.1",
     "xmlbuilder": "^10.0.0",
-    "xmlbuilder2": "^3.1.1",
-    "yarn": "^1.22.22"
+    "xmlbuilder2": "^3.1.1"
   },
   "devDependencies": {
     "@platejs/docx": "workspace:^",
