Add build and deploy scripts for www and workers

--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "brl": "yarn g:brl",
     "build": "yarn g:build",
     "build:apps": "turbo --filter \"./apps/www\" build",
+    "build:www": "yarn workspace www build",
+    "build:www-worker": "yarn workspace www-worker build:worker",
+    "deploy:www": "vercel deploy --prod --yes",
+    "deploy:www-worker": "yarn workspace www-worker deploy",
     "build:tw": "yarn workspace www build:tw",
     "build:watch": "ROARR_LOG=true turbowatch ./tooling/config/turbowatch.config.ts | roarr",
     "deps:check": "npx npm-check-updates@latest --configFileName config/ncurc.yml --workspaces --root --mergeConfig",
