--- a/package.json
+++ b/package.json
@@ -161,7 +161,8 @@
     "remark-mdx": "^3.1.1",
     "scroll-into-view-if-needed": "^3.1.0",
     "tailwind-merge": "^3.4.0",
-    "unist-util-visit": "^5.0.0",
-    "validator": "^13.15.26"
+  "engines": {
+    "yarn": ">=1.22.0"
   }
+}
 }
