--- a/package.json
+++ b/package.json
@@ -139,17 +139,16 @@
     "typescript-eslint": "^8.47.0",
     "ultracite": "6.3.4",
     "y-webrtc": "^10.3.0",
-    "yarn": "^1.22.22",
+    "yarn": "4.12.0",
     "zod": "4.1.12"
   },
   "packageManager": "yarn@4.12.0",
   "engines": {
     "node": ">=18.12.0",
     "npm": "please-use-yarn",
-    "yarn": ">=1.22.0"
+    "yarn": "4.12.0"
   },
   "dependencies": {
-    "yarn": "^1.22.22"
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "csstype": "^3.2.3",
@@ -160,9 +159,6 @@
     "react-dnd": "16.0.1",
     "remark-mdx": "^3.1.1",
     "scroll-into-view-if-needed": "^3.1.0",
-    "tailwind-merge": "^3.4.0",
-  "engines": {
-    "yarn": ">=1.22.0"
-  }
+    "tailwind-merge": "^3.4.0"
 }
 }
