--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
     "build:watch": "ROARR_LOG=true turbowatch ./tooling/config/turbowatch.config.ts | roarr",
     "deps:check": "npx npm-check-updates@latest --configFileName config/ncurc.yml --workspaces --root --mergeConfig",
     "deps:update": "npx npm-check-updates@latest --configFileName config/ncurc.yml -u --workspaces --root --mergeConfig",
-    "deploy:www": "vercel deploy --prod --yes",
-    "deploy:www-worker": "yarn workspace www-worker deploy",
     "dev": "turbo --filter=www dev",
     "dev:webrtc": "PORT=4444 node ./node_modules/y-webrtc/bin/server.js",
     "devt": "yarn workspace www devt",
@@ -133,12 +131,13 @@
     "tailwindcss": "4.1.8",
     "tinyglobby": "0.2.14",
     "tsdown": "0.16.6",
-    "turbo": "2.6.1",
+    "turbo": "2.8.3",
     "turbowatch": "2.29.4",
     "typescript": "5.8.3",
     "typescript-eslint": "^8.47.0",
     "ultracite": "6.3.4",
     "y-webrtc": "^10.3.0",
+    "yarn": "^1.22.22",
     "zod": "4.1.12"
   },
   "packageManager": "yarn@4.12.0",
