--- a/.gitignore
+++ b/.gitignore
@@ -140,6 +140,8 @@ CLAUDE.local.md
 /.cursor/mcp.json
 /.cursor/rules
 /.mcp.json
+/AGENTS.md
+/CLAUDE.md
 # END Skiller Generated Files
 .worktrees
 tmp/
