--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://turbo.build/schema.json",
+  "$schema": "https://v2-8-3.turborepo.dev/schema.json",
   "globalEnv": ["CI", "GITHUB_OAUTH_TOKEN", "OPENAI_API_KEY"],
   "tasks": {
     "dev": {
