--- a/packages/caption/package.json
+++ b/packages/caption/package.json
@@ -43,7 +43,9 @@
     "react-textarea-autosize": "^8.5.9"
   },
   "devDependencies": {
-    "platejs": "workspace:^"
+    "platejs": "workspace:^",
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
   },
   "peerDependencies": {
     "platejs": ">=52.0.11",
