--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -55,7 +55,9 @@
   "devDependencies": {
     "@types/mdast": "^4.0.4",
     "@types/unist": "^3.0.3",
-    "platejs": "workspace:^"
+    "platejs": "workspace:^",
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
   },
   "peerDependencies": {
     "platejs": ">=52.0.11",
