--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -48,7 +48,7 @@
     "@emoji-mart/data": "1.2.1",
     "@excalidraw/excalidraw": "0.18.0",
     "@faker-js/faker": "9.8.0",
-    "@hocuspocus/provider": "2.15.2",
+    "@hocuspocus/provider": "^3.4.0",
     "@hookform/resolvers": "5.1.1",
     "@next/third-parties": "16.0.10",
     "@platejs/ai": "workspace:^",
@@ -129,7 +129,7 @@
     "cmdk": "1.1.1",
     "contentlayer2": "0.4.6",
     "crypto-browserify": "3.12.1",
-    "date-fns": "4.1.0",
+    "date-fns": "^3.6.0",
     "dedent": "1.7.0",
     "dotenv": "16.5.0",
     "framer-motion": "12.17.0",
@@ -179,11 +179,14 @@
     "vaul": "1.1.2",
     "y-webrtc": "10.3.0",
     "yjs": "^13.6.27",
-    "zod": "3.25.61"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@playwright/test": "1.53.0",
     "@shikijs/compat": "1.1.7",
     "@tailwindcss/cli": "4.1.8",
+    "@types/node": "^24.0.0",
+    "@types/react": "^19.2.7",
     "@types/react-syntax-highlighter": "15.5.13",
     "autoprefixer": "10.4.21",
     "concurrently": "9.1.2",
@@ -202,6 +205,7 @@
     "remark-code-import": "1.2.0",
     "rimraf": "6.0.1",
     "shiki": "1.10.1",
+    "slate-dom": "0.119.0",
     "tailwind-scrollbar-hide": "4.0.0",
     "tailwindcss": "4.1.8",
     "ts-node": "10.9.2",
@@ -209,6 +213,7 @@
     "tw-animate-css": "1.3.4",
     "typescript": "5.8.3",
     "unist-builder": "4.0.0",
-    "unist-util-visit": "5.0.0"
+    "unist-util-visit": "5.0.0",
+    "y-protocols": "^1.0.6"
   }
 }
