--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "g:typecheck": "turbo --filter \"./packages/**\" typecheck",
     "g:typecheck:all": "turbo typecheck",
     "gen:package": "yarn plop --plopfile tooling/scripts/plop/plopfile.cjs package",
-    "postinstall": "bunx skiller@latest apply && patch-package --patch-dir tooling/patches",
+    "postinstall": "bun x skiller@latest apply && patch-package --patch-dir tooling/patches",
     "lint": "biome check . && eslint",
     "lint:fix": "biome check . --fix",
     "nuke:node_modules": "rimraf '**/node_modules'",
@@ -82,6 +82,7 @@
     "@types/react-dom": "19.2.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.4",
     "@biomejs/biome": "2.3.6",
     "@changesets/cli": "2.29.7",
     "@changesets/get-github-info": "0.6.0",
@@ -122,11 +123,16 @@
     "next": "16.1.6",
     "openai": "5.3.0",
     "patch-package": "8.0.0",
+    "postcss": "^8.4.38",
     "prompts": "2.4.2",
     "react": "19.2.3",
     "react-dnd-test-backend": "16.0.1",
     "react-dom": "19.2.3",
     "rimraf": "6.0.1",
+    "slate": "0.120.0",
+    "slate-dom": "0.119.0",
+    "slate-history": "^0.100.0",
+    "slate-react": "0.120.0",
     "slate-test-utils": "1.3.2",
     "tailwindcss": "4.1.8",
     "tinyglobby": "0.2.14",
@@ -136,7 +142,9 @@
     "typescript": "5.8.3",
     "typescript-eslint": "^8.47.0",
     "ultracite": "6.3.4",
+    "wrangler": "^3.0.0",
     "y-webrtc": "^10.3.0",
+    "yjs": "^13.6.27",
     "zod": "4.1.12"
   },
   "packageManager": "yarn@4.12.0",
