--- a/packages/basic-styles/package.json
+++ b/packages/basic-styles/package.json
@@ -40,7 +40,9 @@
     "typecheck": "yarn p:typecheck"
   },
   "devDependencies": {
-    "platejs": "workspace:^"
+    "platejs": "workspace:^",
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
   },
   "peerDependencies": {
     "platejs": ">=52.0.11",
