--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -77,5 +77,9 @@
     "access": "public"
   },
   "type": "module",
-  "module": "./dist/index.js"
+  "module": "./dist/index.js",
+  "devDependencies": {
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
+  }
 }
