--- a/packages/csv/package.json
+++ b/packages/csv/package.json
@@ -47,7 +47,9 @@
   },
   "devDependencies": {
     "@types/papaparse": "^5.3.16",
-    "platejs": "workspace:^"
+    "platejs": "workspace:^",
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
   },
   "peerDependencies": {
     "platejs": ">=52.0.11",
