--- a/packages/excalidraw/package.json
+++ b/packages/excalidraw/package.json
@@ -46,7 +46,9 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.17.13",
-    "platejs": "workspace:^"
+    "platejs": "workspace:^",
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
   },
   "peerDependencies": {
     "platejs": ">=52.0.11",
