--- a/packages/math/package.json
+++ b/packages/math/package.json
@@ -45,7 +45,9 @@
   },
   "devDependencies": {
     "@types/katex": "0.16.7",
-    "platejs": "workspace:^"
+    "platejs": "workspace:^",
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
   },
   "peerDependencies": {
     "platejs": ">=52.0.11",
