--- a/packages/toggle/package.json
+++ b/packages/toggle/package.json
@@ -45,7 +45,9 @@
     "react-compiler-runtime": "^1.0.0"
   },
   "devDependencies": {
-    "platejs": "workspace:^"
+    "platejs": "workspace:^",
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
   },
   "peerDependencies": {
     "platejs": ">=52.0.11",
