--- a/packages/udecode/cmdk/package.json
+++ b/packages/udecode/cmdk/package.json
@@ -42,7 +42,9 @@
     "use-sync-external-store": "^1.5.0"
   },
   "devDependencies": {
-    "@types/use-sync-external-store": "0.0.6"
+    "@types/use-sync-external-store": "0.0.6",
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
   },
   "peerDependencies": {
     "react": "^18 || ^19 || ^19.0.0-rc",
