--- a/packages/udecode/react-hotkeys/package.json
+++ b/packages/udecode/react-hotkeys/package.json
@@ -46,5 +46,9 @@
   "module": "./dist/index.js",
   "dependencies": {
     "react-compiler-runtime": "^1.0.0"
+  },
+  "devDependencies": {
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
   }
 }
