feat: add CLI tools for HTML-DOCX conversion and validation
- Implement `html-to-docx`, `docx-to-html`, and `validate-docx` CLI scripts in `packages/docx-io/cli`.
- Adapt `BaseEditorKit` and `DocxExportKit` from `apps/www` for use in CLI (with static components).
- Add `DOMParser` polyfill for Node.js environment.
- Add scripts to `packages/docx-io/package.json`.
- Provide round-trip validation capability.

--- a/packages/docx-io/package.json
+++ b/packages/docx-io/package.json
@@ -33,6 +33,9 @@
     "dist/**/*"
   ],
   "scripts": {
+    "cli:html-to-docx": "bun cli/html-to-docx.ts",
+    "cli:docx-to-html": "bun cli/docx-to-html.ts",
+    "cli:validate-docx": "bun cli/validate-docx.ts",
     "brl": "yarn p:brl",
     "build": "yarn p:build",
     "build:watch": "yarn p:build:watch",
