--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -179,7 +179,7 @@
     "vaul": "1.1.2",
     "y-webrtc": "10.3.0",
     "yjs": "^13.6.27",
-    "zod": "^4.1.12"
+    "zod": "4.1.12"
   },
   "devDependencies": {
     "@playwright/test": "1.53.0",
