--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -53,7 +53,7 @@
     "ai": "^6.0.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "zod": "^3.24.1"
+    "zod": "4.1.12"
   },
   "peerDependencies": {
     "platejs": ">=52.0.15",
