--- a/apps/www_worker/package.json
+++ b/apps/www_worker/package.json
@@ -12,7 +12,7 @@
     "build:registry": "NODE_ENV=production tsx --tsconfig ./scripts/tsconfig.scripts.json scripts/build-registry.mts",
     "build:tw": "tailwindcss -i ./src/app/globals.css -o ./public/tailwind.css --minify",
     "dev": "concurrently \"bunx contentlayer2 dev\" \"bunx next dev\" \"PORT=4444 node ../../node_modules/y-webrtc/bin/server.js\"",
-    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+    "deploy": "opennextjs-cloudflare deploy",
     "lint": "yarn p:lint",
     "lint:fix": "yarn p:lint:fix",
     "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
