Update installation and build commands in nixpacks.toml

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,8 @@
 [phases.install]
-cmds = ['yarn install --mode=skip-build']
+cmds = ['bun install', 'yarn install --mode=skip-build']
 
 [phases.build]
-cmds = ['turbo build', 'turbo deploy']
+cmds = ['yarm build', 'turbo deploy']
 
 [start]
 cmd = 'node apps/www/.next/standalone/server.js'
