--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,7 +2,7 @@ compressionLevel: 0
 
 defaultSemverRangePrefix: ""
 
-enableGlobalCache: true
+enableGlobalCache: false
 
 enableImmutableInstalls: false
 
