--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,7 @@
 cmds = ['YARN_ENABLE_SCRIPTS=false yarn install --mode=skip-build']
 
 [phases.build]
-cmds = ['turbo build']
+cmds = ['bun run postinstall', 'turbo build']
 
 [start]
 cmd = 'yarn next deploy'
