--- a/package.json
+++ b/package.json
@@ -113,7 +113,8 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "7.0.1",
     "openai": "5.3.0",
-    "patch-package": "8.0.0",
+    "patch-package": "8.0.0", 
+    "postinstall-postinstall": "^2", 
     "prompts": "2.4.2",
     "react": "19.2.3",
     "react-dnd-test-backend": "16.0.1",
