--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "packages/*",
     "packages/udecode/*"
   ],
+"dependenciesMeta": {
+"fsevents": {
+"built": false
+}
+}, 
   "scripts": {
     "brl": "yarn g:brl",
     "build": "yarn g:build",
