--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.install]
-cmds = ['yarn install --mode=skip-build', 'bunx skiller@latest apply && bunx patch-package --patch-dir tooling/patches']
+cmds = ['yarn install --mode=skip-build', 'yarn postinstall', 'bunx skiller@latest apply']
 
 [phases.build]
 cmds = ['yarn build']
