--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -152,7 +152,7 @@
     "react-dnd-html5-backend": "16.0.1",
     "react-dom": "19.2.3",
     "react-hook-form": "7.57.0",
-    "react-lite-youtube-embed": "^3.5.0",
+    "react-lite-youtube-embed": "3.5.0",
     "react-markdown": "10.1.0",
     "react-player": "2.16.0",
     "react-resizable-panels": "3.0.2",
