--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -43,6 +43,7 @@
     "@platejs/markdown": "52.1.0",
     "@platejs/selection": "52.0.16",
     "@platejs/suggestion": "52.0.11",
+    "@platejs/table": "52.0.11",
     "fastest-levenshtein": "1.0.16",
     "lodash": "^4.17.21",
     "react-compiler-runtime": "^1.0.0"
