fix(www): use webpack instead of turbopack, disable react compiler
- Add --webpack flag to avoid turbopack memory issues
- Set NEXT_PRIVATE_DISABLE_WEBPACK_WORKER=true for single worker
- Reduce memory limit to 3072MB (more conservative)
- Disable reactCompiler to reduce memory usage

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "prebuild": "yarn build:contentlayer",
-    "build": "yarn prebuild && yarn r && NODE_OPTIONS='--max-old-space-size=8192' next build",
+    "build": "yarn prebuild && yarn r && NEXT_PRIVATE_DISABLE_WEBPACK_WORKER=true NODE_OPTIONS='--max-old-space-size=3072' next build --webpack",
     "build:contentlayer": "contentlayer2 build",
     "build:registry": "NODE_ENV=production tsx --tsconfig ./scripts/tsconfig.scripts.json scripts/build-registry.mts",
     "build:tw": "yarn tailwindcss -i ./src/app/globals.css -o ./public/tailwind.css --minify",
