--- a/packages/docx-io/tsconfig.json
+++ b/packages/docx-io/tsconfig.json
@@ -8,5 +8,5 @@
     }
   },
   "include": ["src", "../../tooling/config/global.d.ts"],
-  "exclude": []
+  "exclude": ["src/lib/mammoth.js/test/**/*"]
 }
