--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -59,35 +59,35 @@
     "@platejs/caption": "workspace:^",
     "@platejs/code-block": "workspace:^",
     "@platejs/code-drawing": "workspace:^",
-    "@platejs/combobox": "workspace:^",
+    "@platejs/combobox": "52.0.15",
     "@platejs/comment": "workspace:^",
     "@platejs/csv": "workspace:^",
     "@platejs/date": "workspace:^",
-    "@platejs/diff": "workspace:^",
+    "@platejs/diff": "52.0.11",
     "@platejs/dnd": "workspace:^",
     "@platejs/docx": "workspace:^",
     "@platejs/docx-io": "workspace:^",
     "@platejs/emoji": "workspace:^",
     "@platejs/excalidraw": "workspace:^",
     "@platejs/find-replace": "workspace:^",
-    "@platejs/floating": "workspace:^",
-    "@platejs/indent": "workspace:^",
+    "@platejs/floating": "52.0.11",
+    "@platejs/indent": "52.0.11",
     "@platejs/juice": "workspace:^",
     "@platejs/layout": "workspace:^",
     "@platejs/link": "workspace:^",
     "@platejs/list": "workspace:^",
     "@platejs/list-classic": "workspace:^",
-    "@platejs/markdown": "workspace:^",
+    "@platejs/markdown": "52.1.0",
     "@platejs/math": "workspace:^",
     "@platejs/media": "workspace:^",
     "@platejs/mention": "workspace:^",
     "@platejs/playwright": "workspace:^",
-    "@platejs/resizable": "workspace:^",
-    "@platejs/selection": "workspace:^",
+    "@platejs/resizable": "52.0.11",
+    "@platejs/selection": "52.0.16",
     "@platejs/slash-command": "workspace:^",
-    "@platejs/suggestion": "workspace:^",
+    "@platejs/suggestion": "52.0.11",
     "@platejs/tabbable": "workspace:^",
-    "@platejs/table": "workspace:^",
+    "@platejs/table": "52.0.11",
     "@platejs/tag": "workspace:^",
     "@platejs/test-utils": "workspace:^",
     "@platejs/toc": "workspace:^",
@@ -99,7 +99,7 @@
     "@radix-ui/react-checkbox": "1.3.2",
     "@radix-ui/react-collapsible": "1.1.11",
     "@radix-ui/react-context-menu": "2.2.15",
-    "@radix-ui/react-dialog": "1.1.14",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "2.1.15",
     "@radix-ui/react-hover-card": "1.1.14",
     "@radix-ui/react-icons": "1.3.2",
@@ -110,7 +110,7 @@
     "@radix-ui/react-scroll-area": "1.2.9",
     "@radix-ui/react-select": "2.2.5",
     "@radix-ui/react-separator": "1.1.7",
-    "@radix-ui/react-slot": "1.2.3",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "1.1.12",
     "@radix-ui/react-toggle": "1.1.9",
     "@radix-ui/react-toggle-group": "1.1.10",
@@ -134,8 +134,8 @@
     "fumadocs-core": "15.5.1",
     "fzf": "0.5.2",
     "html2canvas-pro": "1.5.11",
-    "jotai": "2.8.4",
-    "lodash": "4.17.21",
+    "jotai": "~2.8.4",
+    "lodash": "^4.17.21",
     "lowlight": "3.3.0",
     "lucide-react": "0.514.0",
     "next": "16.0.10",
@@ -157,7 +157,7 @@
     "react-player": "2.16.0",
     "react-resizable-panels": "3.0.2",
     "react-syntax-highlighter": "15.6.1",
-    "react-textarea-autosize": "8.5.9",
+    "react-textarea-autosize": "^8.5.9",
     "react-tweet": "3.2.2",
     "react-wrap-balancer": "1.1.1",
     "remark-emoji": "5.0.1",
