--- a/packages/docx-io/package.json
+++ b/packages/docx-io/package.json
@@ -35,16 +35,32 @@
   "scripts": {
     "brl": "yarn p:brl",
     "build": "yarn p:build",
+    "build:browser-bundles": "bun run browser:bundle:all",
+    "build:with-browser-bundles": "bun run browser:bundle:all && yarn p:build",
     "build:watch": "yarn p:build:watch",
     "clean": "yarn p:clean",
+    "browser:bundle:all": "bun run mammoth:build:all && bun run html-to-docx:bundle:all",
+    "html-to-docx:bundle": "esbuild src/lib/html-to-docx/index.ts --bundle --platform=browser --alias:path=path-browserify --format=iife --global-name=htmlToDocx --outfile=src/lib/html-to-docx/html-to-docx.browser.js",
+    "html-to-docx:bundle:all": "bun run html-to-docx:bundle && bun run html-to-docx:bundle:min",
+    "html-to-docx:bundle:min": "esbuild src/lib/html-to-docx/index.ts --bundle --platform=browser --alias:path=path-browserify --format=iife --global-name=htmlToDocx --minify --outfile=src/lib/html-to-docx/html-to-docx.browser.min.js",
     "lint": "yarn p:lint",
     "lint:fix": "yarn p:lint:fix",
+    "mammoth:build:all": "bun run mammoth:bundle:all",
+    "mammoth:build:cjs": "mkdir -p src/lib/mammoth.js/dist/cjs && esbuild src/lib/mammoth.js/lib/index.ts --bundle --platform=node --format=cjs --outfile=src/lib/mammoth.js/dist/cjs/index.cjs && esbuild src/lib/mammoth.js/lib/main.ts --bundle --platform=node --format=cjs --outfile=src/lib/mammoth.js/dist/cjs/main.cjs",
+    "mammoth:bundle": "browserify src/lib/mammoth.js/lib/index.ts --extension=.ts --standalone mammoth -t [ babelify --extensions .ts ] -p browserify-prepend-licenses -o src/lib/mammoth.js/mammoth.browser.js",
+    "mammoth:bundle:all": "bun run mammoth:bundle && bun run mammoth:bundle:min",
+    "mammoth:bundle:min": "terser src/lib/mammoth.js/mammoth.browser.js --compress --mangle --output src/lib/mammoth.js/mammoth.browser.min.js",
+    "mammoth:test": "cd src/lib/mammoth.js && bun test --coverage ./test/**/*.tests.ts",
+    "mammoth:test:all": "bun run mammoth:build:cjs && bun run mammoth:test",
     "test": "yarn p:test",
     "test:watch": "yarn p:test:watch",
     "typecheck": "yarn p:typecheck"
   },
   "dependencies": {
+    "@xmldom/xmldom": "^0.8.11",
+    "argparse": "1.0.10",
     "color-name": "^2.0.0",
+    "dingbat-to-unicode": "^1.0.1",
     "html-entities": "^2.6.0",
     "html-to-vdom": "^0.7.0",
     "jszip": "^3.10.1",
@@ -55,9 +71,12 @@
     "react-compiler-runtime": "^1.0.0",
     "validator": "^13.15.15",
     "virtual-dom": "^2.1.1",
+    "xmlbuilder": "10.1.1",
     "xmlbuilder2": "^3.1.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.29.0",
+    "@babel/preset-typescript": "^7.28.5",
     "@platejs/basic-nodes": "workspace:^",
     "@platejs/basic-styles": "workspace:^",
     "@platejs/comment": "workspace:^",
@@ -68,7 +87,19 @@
     "@platejs/suggestion": "workspace:^",
     "@platejs/table": "workspace:^",
     "@platejs/test-utils": "workspace:^",
-    "platejs": "workspace:^"
+    "@vitest/coverage-v8": "^4.0.18",
+    "babelify": "^10.0.0",
+    "browserify": "^17.0.1",
+    "browserify-prepend-licenses": "^1.0.0",
+    "duck": "^0.1.12",
+    "esbuild": "^0.27.3",
+    "hamjest": "^4.1.1",
+    "is-hotkey": "^0.2.0",
+    "path-browserify": "^1.0.1",
+    "platejs": "workspace:^",
+    "react-dnd": "^16.0.1",
+    "temp": "^0.9.4",
+    "terser": "^5.46.0"
   },
   "peerDependencies": {
     "@platejs/comment": ">=52.0.0",
