fix(docx-cli): Fix bin entry and make index.ts handle CLI execution
- Update package.json bin field to point to dist/index.js (actual build output)
- Consolidate CLI logic into index.ts to serve as both library export and CLI entry point
- Add proper shebang to make dist/index.js executable
- Maintains backward compatibility with library imports
- All 6 CLI tests pass successfully

--- a/packages/docx-cli/package.json
+++ b/packages/docx-cli/package.json
@@ -22,7 +22,7 @@
   },
   "license": "MIT",
   "type": "module",
-  "bin": "./dist/cli.js",
+  "bin": "./dist/index.js",
   "scripts": {
     "build": "yarn p:build",
     "build:watch": "yarn p:build:watch",
