--- a/packages/docx-io/package.json
+++ b/packages/docx-io/package.json
@@ -44,7 +44,9 @@
     "typecheck": "yarn p:typecheck"
   },
   "dependencies": {
+    "@xmldom/xmldom": "^0.8.6",
     "color-name": "^2.0.0",
+    "dingbat-to-unicode": "^1.0.1",
     "html-entities": "^2.6.0",
     "html-to-vdom": "^0.7.0",
     "jszip": "^3.10.1",
@@ -55,6 +57,7 @@
     "react-compiler-runtime": "^1.0.0",
     "validator": "^13.15.15",
     "virtual-dom": "^2.1.1",
+    "xmlbuilder": "^10.0.0",
     "xmlbuilder2": "^3.1.1"
   },
   "devDependencies": {
@@ -82,5 +85,13 @@
     "access": "public"
   },
   "type": "module",
-  "module": "./dist/index.js"
+  "module": "./dist/index.js",
+  "browser": {
+    "fs": false,
+    "node:fs": false,
+    "node:os": false,
+    "node:path": false,
+    "os": false,
+    "path": false
+  }
 }
